--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -32,13 +32,14 @@
             </li>
              <div>
             {% if user.is_authenticated %}
-                <a class="nav-item" href="{% url 'post-create' %}">Profile</a>
+                <a class="nav-item" href="{% url 'post-create' %}">Create Post</a>
                 <a class="nav-item" href="{% url 'profile' %}">Profile</a>
                  <a class="nav-item" href="{% url 'logout' %}">Logout</a>
             {% else %}
             <a class="nav-item" href="{% url 'login' %}">Login</a>
              <a class="nav-item" href="{% url 'register' %}">register</a>
-            {% endif %}</div>
+            {% endif %}
+             </div>
         </li>
 
         </ul>
@@ -65,7 +66,7 @@
 }
 
     </style>
-    {% block content  %}
+    {% block content %}
 _
 {% endblock %}
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
