--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,19 +2,20 @@
 {% block content %}
 
         <article class="media content-section">
-        <img class="rounded-circle account-img" src="{{ object.author.profile.image.url }}" alt="">
+        <img class="rounded-circle account-img" src="{{ object.author.profile.image.url }}" width="100" height="100">
         <div class="media-body">
             <div class="article-metadata">
                 <a class ='mr-2' href="">Written by {{ object.author }}</a>
                 <small class="text-muted">Posted on {{ object.date_published|date:'F d Y' }}</small>
-                { %if object.author == user % }
-                   <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'post-update' object.id %}">Update</a>
-                   <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'post-delete' object.id %}">Delete</a>
-                {% endif %}
+
             </div>
         <h1 class="article-title">{{object.title  }}</h1>
 
         <p>{{ object.content }}</p>
+            {% if object.author == user %}
+                   <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'post-update' object.id %}">Update</a>
+                   <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'post-delete' object.id %}">Delete</a>
+                {% endif %}
 
         </div>
         </article>
