--- a/blog/static/blog/nav.css
+++ b/blog/static/blog/nav.css
@@ -4,6 +4,8 @@ body {
     background: #f2f6e9;
 }
 
+
+
 .navbar {
     background:#6ab446;
 }
@@ -24,4 +26,29 @@ body {
 
 .navbar-collapse {
     justify-content: flex-end;
+}
+.overlay {
+    position: absolute;
+    min-height: 100%;
+    min-width: 100%;
+    left: 0;
+    top: 0;
+    background: rgba(0, 0, 0, 0.6);
+}
+.description {
+    left: 50%;
+    position: absolute;
+    top: 45%;
+    transform: translate(-50%, -55%);
+    text-align: center;
+}
+
+.description h1 {
+    color: #6ab446;
+}
+
+.description p {
+    color: #fff;
+    font-size: 1.3rem;
+    line-height: 1.5;
 }
