--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,9 +8,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
               integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 
-        <link rel="stylesheet" type="text/css" href="blog/nav.css">
+
+        <link rel="stylesheet" type="text/css" href="{%  static 'blog/nav.css' %}">
+
     </head>
 
     <body>
@@ -46,33 +47,29 @@
 
     </div>
 </nav>
+
      <style type="text/css">
-                  .navbar {
-  background:#6ab446;
-}
-.nav-link,
-.navbar-brand {
-  color: #fff;
-  cursor: pointer;
-}
-.nav-link {
-  margin-right: 1em !important;
-}
-.nav-link:hover {
-  color: #000;
-}
-.navbar-collapse {
-  justify-content: flex-end;
-}
+
 
     </style>
     {% block content %}
-_
+_<header class="page-header header container-fluid">
+<style>
+    .header {
+    background-image: url('img1.jpg');
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+</style>
+    <div class="overlay"></div>
+</header>
 {% endblock %}
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
             integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+     <script src="{% static 'blog/nav.js'%}"></script>
     </body>
 
 
