--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -23,7 +23,7 @@
     <div class="collapse navbar-collapse" id="main-navigation">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="{% url 'blog-home' %}">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
@@ -48,12 +48,9 @@
     </div>
 </nav>
 
-     <style type="text/css">
 
-
-    </style>
     {% block content %}
-_<header class="page-header header container-fluid">
+<header class="page-header header container-fluid">
 <style>
     .header {
     background-image: url('img1.jpg');
